git-svn-id: https://svn.osdn.net/svnroot/jsonic/trunk@770 a27f3287-6b31-0410-ac9d-9e0373bb86a5